# UABA2-AP-game-v1

./: CMakeLists.txt
apps/: CMakeLists.txt  app.cpp
data/sprites/background_tile/: background_tile.psd
data/sprites/bonus/: spring.psd
data/sprites/bullet/: bullet.psd
data/sprites/heart/: heart.psd
data/sprites/skeleton/: skeleton.psd  skeleton_red.psd
data/sprites/spikes/: spikes.psd
docs/: architecture.md  todo.md
src/: main.cpp
src/core/: CMakeLists.txt  Camera.cpp  Camera.h  CoreConstants.cpp  CoreConstants.h  EventManager.cpp  InputMap.h  Random.cpp  Random.h  Score.cpp  Score.h  Stopwatch.cpp  Stopwatch.h  World.cpp  World.h  camera.cpp  camera.h  constants.cpp  constants.h  input_map.h  stopwatch.cpp  world.cpp  world.h
src/core/animation/: Animation.h  AnimationData.cpp  AnimationData.h  AnimationPlayer.cpp  AnimationPlayer.h  AnimationStateMachine.cpp  AnimationStateMachine.h
src/core/audio/: AudioPlayer.cpp  AudioPlayer.h  AudioResource.h  IEntityAudioCreator.h
src/core/constants/: animation_data.cpp  animation_data.h  constants.cpp  constants.h  resources.cpp  resources.h
src/core/entities/: Doodle.cpp  Doodle.h  Entity.cpp  Entity.h  IEntityViewCreator.h
src/core/entities/game/: Doodle.h
src/core/entities/physics/: Bullet.cpp  Bullet.h  Doodle.cpp  Doodle.h  PhysicsEntity.cpp  PhysicsEntity.h  Platform.cpp  Platform.h  PortalRadio.cpp  PortalRadio.h  Wall.cpp  Wall.h
src/core/entities/physics/bonus/: Bonus.cpp  Bonus.h  JetpackBonus.cpp  JetpackBonus.h  SpringBonus.cpp  SpringBonus.h
src/core/entities/physics/bonus/enemy/: AdvancedEnemy.cpp  AdvancedEnemy.h  Enemy.cpp  Enemy.h
src/core/entities/physics/bonus/hp-modifier/: HPBonus.cpp  HPBonus.h  SpikeBonus.cpp  SpikeBonus.h
src/core/entities/physics/bonus/movement/: JetpackBonus.cpp  JetpackBonus.h  SpringBonus.cpp  SpringBonus.h
src/core/entities/physics/platform/: MovPlatform.cpp  Platform.cpp  Platform.h  TelePlatform.cpp  TelePlatform.h  TempPlatform.cpp
src/core/entities/ui/: BgTile.cpp  BgTile.h  Button.cpp  Button.h  HPBar.cpp  HPBar.h  Text.cpp  Text.h  TextBox.cpp  TextBox.h  UIEntity.cpp  UIEntity.h  UIWidget.cpp  UIWidget.h
src/core/entities/ui/hp-bar/: HPBar.cpp  HPBar.h  Heart.cpp  Heart.h
src/core/math/: Vector2f.cpp  Vector2f.h  math_funcs.cpp  math_funcs.h  vector2f.cpp
src/core/observer-pattern-interface/: ISubject.h
src/core/observer_pattern_interface/: IObserver.h  ISubject.cpp  ISubject.h  i_observer.h  i_subject.cpp  i_subject.h
src/core/physics/: Hitbox.cpp  Hitbox.h  Ray.cpp  Ray.h  collisions.cpp  collisions.h
src/core/utils/: Camera.cpp  Stopwatch.cpp  Stopwatch.h  UserInputMap.h  Utils.cpp  Utils.h
src/game/: CMakeLists.txt  EntityView.cpp  EntityView.h  EntityViewCreator.cpp  EntityViewCreator.h  Game.cpp  Game.h  RepresentationConstants.cpp  constants.cpp  constants.h  game.cpp  game.h
src/game/audio/: EntityAudio.cpp  EntityAudio.h  EntityAudioCreator.cpp  EntityAudioCreator.h
src/game/entity_view/: EntitySpriteView.cpp  EntitySpriteView.h  EntityTexAni.cpp  EntityTexAni.h  EntityTextBoxView.cpp  EntityTextBoxView.h  EntityTextView.cpp  EntityTextView.h  EntityView.cpp  EntityView.h  EntityViewCreator.cpp  EntityViewCreator.h
src/game_logic/: CoreConstants.h  EventManager.h  World.cpp  World.h
src/game_logic/data_structures/: Vector2f.cpp  Vector2f.h
src/game_logic/observer_pattern_interface/: IObserver.h  ISubject.h
src/game_logic/utils/: Camera.h  Utils.h
src/game_representation/: Game.cpp  Game.h  RepresentationConstants.h
